--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-openid-connect": "^2.16.0",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
     "swagger-ui-express": "^4.6.3",
